# cairo-webauthn

./: .gitignore  .gitmodules  .tool-versions  Cargo.toml  LICENSE  Makefile  README.md  Scarb.toml  TODO.txt  cairo_project.toml  gen.py  protostar.toml  requirements.txt  signer.py  util.py
.github/workflows/: ci.yml  test.yaml
account_sdk/: Cargo.toml  KatanaConfig.toml  expanded.rs  tests.txt
account_sdk/src/: abigen.rs  account_factory.rs  deploy_contract.rs  deployer.rs  felt_ser.rs  katana.rs  lib.rs  rpc_provider.rs  transaction_waiter.rs
account_sdk/src/deploy_contract/: declaration.rs  deployment.rs  mod.rs  pending.rs
account_sdk/src/providers/: devnet.rs  katana.rs  katana_runner.rs  mod.rs
account_sdk/src/session_token/: account.rs  hash.rs  mod.rs  sequence.rs  session.rs  session_account.rs  signature.rs  test_utils.rs
account_sdk/src/suppliers/: devnet.rs  katana.rs  katana_runner.rs  mod.rs
account_sdk/src/tests/: contract_deploy.rs  contract_test.rs  deployment_test.rs  ecdsa_test.rs  erc20_methods_test.rs  katana_runner.rs  katana_test.rs  mod.rs  new_deploy_test.rs  one_file_all.rs  prefounded_test.rs  prefunded_test.rs  runners_test.rs  session_token.rs  simple_deploy_test.rs  stark_pair_auth_test.rs  webauthn_signer_test.rs
account_sdk/src/tests/runners/: devnet_runner.rs  katana_runner.rs  mod.rs  waiter.rs
account_sdk/src/tests/webauthn/: mod.rs  utils.rs
account_sdk/src/webauthn_signer/: account.rs  cairo_args.rs  credential.rs  mod.rs
cairo_client/: Cargo.toml
cairo_client/cairo/src/: lib.cairo
cairo_client/init/: Scarb.toml
cairo_client/src/run/functions/: mod.rs  verify_function.rs
cartridge_account/: Scarb.toml
cartridge_account/src/: bytes_be_reversed.cairo  interface.cairo  lib.cairo  signature_type.cairo
cartridge_account/tests/: test_account.cairo
crates/account_sdk/: Cargo.toml
crates/account_sdk/compiled/: account.compiled_contract_class.json  account.contract_class.json  erc20.contract_class.json
crates/account_sdk/src/: abigen.rs  lib.rs
crates/account_sdk/src/wasm_tests/: mod.rs  webauthn.rs
crates/account_sdk/src/webauthn_signer/: account.rs  credential.rs
crates/cairo_client/: Cargo.toml
crates/cairo_client/cairo/: Scarb.toml
crates/cairo_client/cairo/src/: lib.cairo
crates/cairo_client/src/: lib.rs
crates/cartridge_account/: Scarb.toml
crates/cartridge_account/src/: erc20.cairo  lib.cairo
crates/cartridge_account/tests/: test_account.cairo
crates/test_gen_scripts/: requirements.txt  utils.py
crates/test_gen_scripts/auth/: expand_auth_data_test.py  helpers_test.py  suite.py  webauthn_test.py
crates/webauthn/auth/: Scarb.toml
crates/webauthn/auth/src/: component.cairo  deserializable_endpoints.cairo  ecdsa.cairo  helpers.cairo  interface.cairo  lib.cairo  mod_arithmetic.cairo  tests.cairo  types.cairo  webauthn.cairo
crates/webauthn/session/: Scarb.toml
crates/webauthn/session/src/: deserializable_endpoints.cairo  lib.cairo  signature.cairo  tests.cairo
crates/webauthn/tests/: Cargo.toml  build.rs
crates/webauthn/tests/src/: arg_builder.rs  helpers.rs  lib.rs  prelude.rs  prop_utils.rs  utils.rs
crates/webauthn/tests/src/auth/: expand_auth_data.rs  helpers.rs  mod.rs  mod_arithmetic.rs  verify_ecdsa.rs  verify_signature.rs
crates/webauthn/tests/src/session/: mod.rs  prop_signature_proofs.rs  signature_proofs.rs
crates/webauthn/tests/src/webauthn/: mod.rs
foundry/: Scarb.toml
foundry/src/: account.cairo  interface.cairo  introspection.cairo  lib.cairo  tests.cairo
foundry/src/account/: account.cairo  interface.cairo
foundry/src/introspection/: interface.cairo  src5.cairo
foundry/src/tests/: account.cairo  introspection.cairo
foundry/src/tests/account/: test_account.cairo
foundry/src/tests/introspection/: test_src5.cairo
foundry/src/token/erc20/: dual20.cairo  erc20.cairo
foundry/src/utils/: unwrap_and_cast.cairo
foundry/tests/: test_account.cairo  test_contract.cairo
keys/: acc  account.json  env.sh  keystore  keystore.json
keys/created/: account.json  env.sh  keystore.json
keys/prefunded/: account.json  env.sh  keystore.json
scripts/: main.py  structure.py  verify_ecdsa_test.py
src/: bits.cairo  ecdsa.cairo  errors.cairo  fib.cairo  helpers.cairo  lib.cairo  mock.cairo  mocks.cairo  mod_arithmetic.cairo  sha256.cairo  tests.cairo  types.cairo  verify.cairo  webauthn.cairo
src/auth/: Scarb.toml
src/auth/src/: component.cairo  ecdsa.cairo  helpers.cairo  interface.cairo  lib.cairo  webauthn.cairo
src/auth/src/tests/: verify_test.cairo  (+7 more)
src/dev-sdk/: Scarb.toml
src/dev-sdk/src/: lib.cairo
src/session/: Scarb.toml
src/session/src/: hash.cairo  interface.cairo  lib.cairo  merkle.cairo  signature.cairo  tests.cairo
src/tests/: expand_auth_data_gen_test.cairo  gcd_test.cairo  gen.py  helpers_gen_test.cairo  mod_arithmetic_test.cairo  verify_ecdsa_gen_test.cairo  verify_ecdsa_test.cairo  verify_signature_gen_test.cairo  verify_test.cairo  verify_user_flags_test.cairo  webauthn_big_test.cairo  webauthn_error_test.cairo  webauthn_gen_test.cairo  webauthn_sample_test.cairo  webauthn_test.cairo
test_gen_scripts/: deterministic_generator.py  expand_auth_data_test.py  helpers_test.py  main.py  seed_generator.py  structure.py  utils.py  verify_ecdsa_test.py  verify_signature_test.py  webauthn_test.py
test_gen_scripts/auth/: expand_auth_data_test.py  helpers_test.py  suite.py  verify_ecdsa_test.py  verify_signature_test.py  webauthn_test.py
test_gen_scripts/session/: merkle_test.py  signature_proofs_test.py  signature_test.py  suite.py
tests/: gen.py  requirements.txt  signer.py  test_webauthn.cairo  test_webauthn_gen.cairo
webauthn_sdk/: Cargo.toml  test_file.cairo
webauthn_sdk/cairo/: Scarb.toml
webauthn_sdk/cairo/src/: lib.cairo
webauthn_sdk/src/: authenticate.rs  compile.rs  function.rs  generate.rs  lib.rs  logger.rs  main.rs  old_main.rs  parse.rs  run.rs
webauthn_sdk/src/prepare/: compile.rs  generate.rs  logger.rs  mod.rs  parse.rs  run.rs
webauthn_sdk/src/run/: mod.rs
webauthn_sdk/src/run/functions/: utils.rs
(+17 files in other folders)
