[workspace]
resolver = "2"
members = ["crates/account_sdk", "crates/webauthn/tests"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
cainome = { git = "https://github.com/piniom/cainome", tag="v0.2.4-expand", features = [
    "abigen-rs", "expand-expr"
] }
cairo-lang-starknet = "2.4.0"
ecdsa = "0.16.9"
futures = "0.3"
lazy_static = "1"
p256 = "0.13"
primitive-types = { version = "0.12", default-features = false }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = "1"
serde_json = "1"
sha2 = "0.10"
starknet = "0.8"
starknet-crypto = "0.6.1"
thiserror = "1"
toml = "0.8"
u256-literal = "1"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
wasm-webauthn = { git = "https://github.com/broody/wasm-webauthn", rev = "f54bdbc3b4c5da2679e6f74278295b3924b56db5" }
webauthn-rs-proto = "0.4"
account-sdk = { path = "crates/account_sdk" }
tokio = { version = "1", features = ["macros", "time"] }
