[package]
name = "account-sdk"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.190"
serde_json = "1.0.108"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
url = "2.4.1"
toml = "0.5"
tokio = { version = "1.0", features = ["macros"] }
wasm-bindgen = "0.2.88"



