[package]
name = "account-sdk"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.190"
serde_json = "1.0.108"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
url = "2.4.1"
toml = "0.5"
tokio = { version = "1.0", features = ["macros"] }
wasm-bindgen = "0.2.88"
thiserror = "1.0.32"
futures = "0.3.28"
async-trait = "0.1.68"
anyhow = "1.0.75"
cairo-lang-starknet = "2.3.1"



