[package]
name = "account-sdk"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
url = "2"
toml = "0.8"
tokio = { version = "1.0", features = ["macros"] }
wasm-bindgen = "0.2"
thiserror = "1"
futures = "0.3"
async-trait = "0.1"
anyhow = "1"
cairo-lang-starknet = "2"
lazy_static = "1.4.0"
