[package]
name = "cairo-client"
edition.workspace = true
version.workspace = true
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive", "env", "string"] }
termcolor = "1.1"
scarb = { git = "https://github.com/software-mansion/scarb.git", tag="v2.3.0" }
cairo-lang-compiler = "2.2.0"
cairo-lang-sierra-generator = "2.2.0"
cairo-lang-diagnostics = "2.2.0"
cairo-lang-runner = "2.2.0"
cairo-lang-starknet = "2.2.0"
cairo-lang-utils = {version = "2.2.0", features = ["env_logger"]}
cairo-lang-sierra = "2.2.0"
cairo-felt = "0.8.7"
passkey = "0.1.0"
url = "2.4.1"
tokio = "1.32.0"
async-trait = "0.1.73"
ecdsa = "0.16.8"
p256 = "0.13.2"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha256 = "1.4.0"

