[package]
name = "webauthn-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive", "env", "string"] }
termcolor = "1.1"
scarb = { git = "https://github.com/software-mansion/scarb.git", tag="v0.7.0" }
cairo-lang-compiler = "2.2.0"
cairo-lang-sierra-generator = "2.2.0"
cairo-lang-diagnostics = "2.2.0"
cairo-lang-runner = "2.2.0"
cairo-lang-starknet = "2.2.0"
cairo-lang-utils = {version = "2.2.0", features = ["env_logger"]}
cairo-lang-sierra = "2.2.0"
cairo-felt = "0.8.7"

