[package]
name = "tests"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet.workspace = true
cairo-args-runner = { path="/home/szymon/dev/cairo-args-runner" }
proptest = "1.4.0"
p256.workspace = true
account-sdk.workspace = true
u256 = "0.1.0"
sha2.workspace = true
